# dev-kit

./: AGENTS.md  README.md  pyproject.toml
.opencode/agents/: agent-systems.md  api-engineer.md  architecture-analyst.md  build.md  data-engineer.md  data-modeler.md  debugger.md  docs-writer.md  orchestrator.md  plan.md  repo-explorer.md  reviewer.md  solution-planner.md
.opencode/commands/: adr.md  architecture-doc.md  data-profile.md  debugging.md  deep-analysis.md  jira-doc.md  onboarding.md  pipeline-etl.md  pr-doc.md  release-notes.md
docs/: agent-strategy.md  guia-de-uso.md  kit-index.md
docs/decisions/: 0001-record-architecture-decisions.md
docs/standards/: diagram-guidelines.md  documentation-standards.md  naming-conventions.md
docs/workflows/: architecture-doc-workflow.md  bugfix-workflow.md  data-task-workflow.md  feature-workflow.md  opencode-workflow.md  solution-planning-workflow.md
examples/docs/: sample-jira.md  sample-pr.md
examples/input/: config_etl.yaml  sample_customers.csv  sample_input.json
examples/output/: sample_customers_processed.csv  sample_output_error.json  sample_output_success.json
playbooks/: delivery-checklist.md  jira-checklist.md  onboarding.md  pr-checklist.md  release-checklist.md
prompts/analysis/: deep-analysis-prompt.md
prompts/architecture/: adr-prompt.md  architecture-doc-prompt.md
prompts/data/: data-profiling-prompt.md  etl-generator-prompt.md  load-script-prompt.md
prompts/github/: pr-doc-prompt.md
snippets/: markdown.code-snippets  python.code-snippets  sql.code-snippets  typescript.code-snippets
(+43 files in other folders)
